# django-date-and-time

./: manage.py  pyproject.toml
dateandtime/: asgi.py  settings.py  urls.py  wsgi.py
example/: forms.py  models.py  views.py
example/migrations/: 0001_initial.py
example/templates/: reminder_create.html  reminder_view.html
