[tool.poetry]
name = "django-date-and-time"
version = "0.1.0"
description = ""
authors = ["Piotr Kilczuk <piotr@kilczuk.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
